--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/info/popup/sub_part_list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/info/popup/sub_part_list.html
@@ -65,7 +65,7 @@ $(function(){
 				}
 			},			
 			{name: "MATNR", 	data: "MATNR", 		title: "[[#{HQP_L_PART_NO}]]"	},	// Part No
-			{name: "MAKTX", 	data: "MAKTX", 		title: "[[#{HQP_L_DESCRIPTION}]]"	},	// Part No Desc
+			{name: "MAKTX", 	data: "MAKTX", 		title: "[[#{HQP_L_PART_DESCRIPTION}]]"	},	// Part No Desc
 			{name: "AVA_FLAG", 	data: "AVA_FLAG", 	title: "[[#{HQP_L_AVAILABILITY}]]"	}	// Availability
 		],
 		columnDefs: [
