--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/info/view.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/info/view.html
@@ -34,7 +34,7 @@
 <table class="condition table-fixed">
 	<tbody>
 		<tr>
-			<th style="width:15%" th:text="#{HQP_L_DESCRIPTION}"></th><!-- Description -->
+			<th style="width:15%" th:text="#{HQP_L_PART_DESCRIPTION}"></th><!-- Description -->
 			<td id="MAKTX"></td>
 			<th style="width:15%" th:text="#{HQP_L_STOCK}"></th><!-- Stock -->
 			<td id="STOCK"></td>			
