--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/write.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/write.html
@@ -775,7 +775,7 @@ $(function(){
 				}
 			},
 			{name: "supplyMaterialNo", data: "supplyMaterialNo", title: "[[#{HQP_L_SUPPLY_PART_NO}]]", width: "150px"},//Supply Part No
-			{name: "description", data: "description", title: "[[#{HQP_L_DESCRIPTION}]]", width: "250px"},//Description
+			{name: "description", data: "description", title: "[[#{HQP_L_PART_DESCRIPTION}]]", width: "250px"},//Description
 			{
 				name: "orderQty",
 				data: "orderQty",
