--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/write2.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/write2.html
@@ -839,7 +839,7 @@
 							
 							partInfo.push(">[[#{HQP_L_SUPPLY_PART_NO}]]: " + JpUtilsString.trimToEmpty(row.supplyMaterialNo) + "</span><br/>");
 							
-							partInfo.push("<span class='orange'>[[#{HQP_L_DESCRIPTION}]]: " + JpUtilsString.trimToEmpty(row.description) + "</span><br/>");
+							partInfo.push("<span class='orange'>[[#{HQP_L_PART_DESCRIPTION}]]: " + JpUtilsString.trimToEmpty(row.description) + "</span><br/>");
 							partInfo.push("[[#{HQP_L_SALES_LOT}]]: " + JpUtilsString.trimToEmpty(row.lotQty) + JpUtilsString.trimToEmpty(row.uom) + "<br/>");
 							partInfo.push("[[#{HQP_L_AM_DEV_PART}]]: " + JpUtilsString.trimToEmpty(row.amDevPart) + "<br/>");
 							partInfo.push("[[#{HQP_L_AVAILABILITY}]]: " + JpUtilsString.trimToEmpty(row.availability) + "<br/>");							
