--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/order/delivery/view.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/order/delivery/view.html
@@ -97,7 +97,7 @@ $(function(){
 			{data: "EXIDV", title: "[[#{HQP_L_HU_NO}]]"},//H.U. No.
 			{data: "MATNR_SO", title: "[[#{HQP_L_ORDER_PART_NO}]]"},//Order Parts No.
 			{data: "MATNR_SH", title: "[[#{HQP_L_SUPPLY_PART_NO}]]"},//Supply Parts No.
-			{data: "MAKTX", title: "[[#{HQP_L_DESCRIPTION}]]"},//Description
+			{data: "MAKTX", title: "[[#{HQP_L_PART_DESCRIPTION}]]"},//Description
 			{data: "LFIMG", title: "[[#{HQP_L_QTY}]]"},//Qty
 			{data: "NETPR", title: "[[#{HQP_L_UNIT_PRICE}]]"},//Unit Price
 			{data: "NETWR", title: "[[#{HQP_L_TOTAL_AMOUNT}]]"},//Amount
