--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/quot/view.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/quot/view.html
@@ -150,7 +150,7 @@ $(function(){
 	    			{data: "ITEM", title: "[[#{HQP_L_LINE_ITEM}]]"},//Item
 	    			{data: "MATERIAL_ENT", title: "[[#{HQP_L_ORDER_PART_NO}]]"},//Order Part No.
 	    			{data: "MATERIAL", title: "[[#{HQP_L_SUPPLY_PART_NO}]]"},//Supply Part No
-	    			{data: "MATERIAL_TEXT", title: "[[#{HQP_L_DESCRIPTION}]]"},//Description
+	    			{data: "MATERIAL_TEXT", title: "[[#{HQP_L_PART_DESCRIPTION}]]"},//Description
 	    			{data: "REQ_QTY", title: "[[#{HQP_L_REQ_QTY}]]"},//Req Qty
 	    			{data: "KBETR", title: "[[#{HQP_L_LIST_PRICE}]]"},//List Price
 	    			{data: "NET_PRICE", title: "[[#{HQP_L_NET_PRICE}]]"},//Net price
