--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/order/status/view.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/order/status/view.html
@@ -58,7 +58,7 @@ $(function(){
 			{data: "KONDA_T", 		title: "[[#{HQP_L_ORDER_TYPE}]]"},// Order Type
 			{data: "MATNR_SO", 		title: "[[#{HQP_L_ORDER_PART_NO}]]"},// Order Part No.
 			{data: "MATNR_SH", 		title: "[[#{HQP_L_SUPPLY_PART_NO}]]"},// Supply Part No
-			{data: "MAKTX", 		title: "[[#{HQP_L_DESCRIPTION}]]"},// Description
+			{data: "MAKTX", 		title: "[[#{HQP_L_PART_DESCRIPTION}]]"},// Description
 			{data: "SO_QTY", 		title: "[[#{HQP_L_ORDER_QTY}]]"},// Order Qty
 			{data: "RE_QTY", 		title: "[[#{HQP_L_RESERVED_QTY}]]"},// Reserved Qty
 			{data: "PI_QTY", 		title: "[[#{HQP_L_PACKED_QTY}]]"},// Packed Qty
