--- a/src/main/resources/templates/portal/iv/hq/parts/export/claim/create/write.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/claim/create/write.html
@@ -60,7 +60,7 @@
 						<th th:text="#{HQP_L_ORDER_NO}" class="center order-no"></th>
 						<th th:text="#{HQP_L_LINE_ITEM}" class="center item-line"></th>
 						<th th:text="#{HQP_L_ORDER_PART_NO}" class="center material"></th>
-						<th th:text="#{HQP_L_DESCRIPTION}" class="center"></th>
+						<th th:text="#{HQP_L_PART_DESCRIPTION}" class="center"></th>
 						<th th:text="#{HQP_L_ORDER_QTY}" class="center qty"></th>
 						<th th:text="#{HQP_L_CLAIM_QTY}" class="center qty"></th>
 						<th th:text="#{HQP_L_UOM}" class="center uom"></th>
