--- a/src/main/resources/templates/portal/iv/hq/parts/export/invoice/view.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/invoice/view.html
@@ -45,7 +45,7 @@ $(function(){
 			{data: "TKNUM", 		title: "[[#{HQP_L_SHIPMENT_NO}]]"},
 			{data: "MATNR_SO", 		title: "[[#{HQP_L_ORDER_PART_NO}]]"},
 			{data: "MATNR_SH", 		title: "[[#{HQP_L_SUPPLY_PART_NO}]]"},
-			{data: "MAKTX", 		title: "[[#{HQP_L_DESCRIPTION}]]"},
+			{data: "MAKTX", 		title: "[[#{HQP_L_PART_DESCRIPTION}]]"},
 			{data: "LFIMG", 		title: "[[#{HQP_L_QTY}]]"},
 			{data: "NETPR", 		title: "[[#{HQP_L_UNIT_PRICE}]]"},
 			{data: "MEINS", 		title: "[[#{HQP_L_UOM}]]"},
