--- a/src/main/resources/templates/portal/iv/hq/parts/export/order/backorder/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/order/backorder/list.html
@@ -91,7 +91,7 @@ $(function(){
 			{data: "POSNR", 		title: "[[#{HQP_L_LINE_ITEM}]]"},//Line Item 
 			{data: "MATNR_SO", 		title: "[[#{HQP_L_ORDER_PART_NO}]]"},//Order Part No.
 			{data: "MATNR_SH", 		title: "[[#{HQP_L_SUPPLY_PART_NO}]]"},//Supply Part No
-			{data: "MAKTX", 		title: "[[#{HQP_L_DESCRIPTION}]]"},//Description
+			{data: "MAKTX", 		title: "[[#{HQP_L_PART_DESCRIPTION}]]"},//Description
 			{data: "KWMENG_SO", 	title: "[[#{HQP_L_ORDER_QTY}]]"},//Order Qty
 			{data: "KWMENG_SH", 	title: "[[#{HQP_L_SHIPMENT_COMPLETE_QTY}]]"},//S.Completion Qty
 			{data: "KWMENG", 		title: "[[#{HQP_L_BACKORDER_QTY}]]"},//B/O Quantity
