--- a/src/main/resources/templates/portal/iv/hq/parts/export/order/create/write.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/order/create/write.html
@@ -786,7 +786,7 @@ $(function(){
 				}
 			},
 			{name: "supplyMaterialNo", data: "supplyMaterialNo", title: "[[#{HQP_L_SUPPLY_PART_NO}]]"},//Supply Part No
-			{name: "description", data: "description", title: "[[#{HQP_L_DESCRIPTION}]]"},//Description
+			{name: "description", data: "description", title: "[[#{HQP_L_PART_DESCRIPTION}]]"},//Description
 			{
 				name: "orderQty",
 				data: "orderQty",
