--- a/src/main/resources/templates/portal/iv/hq/parts/export/order/display/order/view_inc.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/order/display/order/view_inc.html
@@ -153,7 +153,7 @@ $(function(){
 	    			{data: "ITEM", title: "[[#{HQP_L_LINE_ITEM}]]"},//Item
 	    			{data: "MATERIAL_ENT", title: "[[#{HQP_L_ORDER_PART_NO}]]"},//Order Part No.
 	    			{data: "MATERIAL", title: "[[#{HQP_L_SUPPLY_PART_NO}]]"},//Supply Part No
-	    			{data: "MATERIAL_TEXT", title: "[[#{HQP_L_DESCRIPTION}]]"},//Description
+	    			{data: "MATERIAL_TEXT", title: "[[#{HQP_L_PART_DESCRIPTION}]]"},//Description
 	    			{data: "REQ_QTY", title: "[[#{HQP_L_REQ_QTY}]]"},//Req Qty
 	    			{data: "LOT_QTY", title: "[[#{HQP_L_SALES_LOT}]]"},//Sales Lot
 	    			{data: "UOM", title: "[[#{HQP_L_UOM}]]"},//UoM
