--- a/src/main/resources/templates/portal/iv/hq/parts/export/order/status/summary/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/order/status/summary/list.html
@@ -89,7 +89,7 @@ $(function(){
 			{data: "BSTKD", 		title: "[[#{HQP_L_PO_NO}]]"},
 			{data: "MATWA", 		title: "[[#{HQP_L_ORDER_PART_NO}]]"},			
 			{data: "MATNR", 		title: "[[#{HQP_L_SUPPLY_PART_NO}]]"},			
-			{data: "ARKTX", 		title: "[[#{HQP_L_DESCRIPTION}]]"},
+			{data: "ARKTX", 		title: "[[#{HQP_L_PART_DESCRIPTION}]]"},
 			{data: "MENGE", 		title: "[[#{HQP_L_ORDER_QTY}]]"},
 			{data: "VBELN", 		title: "[[#{HQP_L_ORDER_NO}]]"},
 			{data: "POSNR", 		title: "[[#{HQP_L_LINE_ITEM}]]"},
