--- a/src/main/resources/templates/portal/iv/hq/parts/export/claim/create/reference/order/popup/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/claim/create/reference/order/popup/list.html
@@ -81,7 +81,7 @@ $(function(){
 			{data: "POSNR", title: "[[#{HQP_L_LINE_ITEM}]]"},
 			{data: "BSTKD", title: "[[#{HQP_L_PO_NO}]]"},
 			{data: "MATNR", title: "[[#{HQP_L_SUPPLY_PART_NO}]]"},
-			{data: "MAKTX", title: "[[#{HQP_L_DESCRIPTION}]]"},
+			{data: "MAKTX", title: "[[#{HQP_L_PART_DESCRIPTION}]]"},
 			{data: "KWMENG", title: "[[#{HQP_L_REQ_QTY}]]"},
 			{data: "ERDAT", title: "[[#{HQP_L_ORDER_DATE}]]"}
 		],
