--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/main.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/main.html
@@ -146,11 +146,49 @@
 <script>
 $(window).on("load", function() {
 	ProgressBar.hide();
+	
+	Survey.getLatestSurvey();
 });
 
 $(window).resize($.debounce(100, function(e){
 	resizeView();
 }));
+
+let Survey = {
+	sSeq: 0,
+	getLatestSurvey: function() {
+		let targetCode = '0001031780';
+		let options = {
+			url: "/portal/iv/survey/latest",
+			data: {targetCode:targetCode},
+			success: function(data) {
+				let survey = data.RESULT;
+				if (survey == null) return;
+				
+				if (confirm('['+survey.title+'] 설문에 응시하시겠습니까?')) {
+					Survey.sSeq = survey.sseq;
+					Survey.popupVote();
+				}
+			},
+			error: function(jqXHR, textStatus, errorThrown) {
+				console.log(textStatus);
+				console.log(errorThrown);
+			}
+		};
+		
+		JpUtilsAjax.post(options);
+	},
+	popupVote: function() {
+		if (this.sSeq == 0) {
+			return;
+		}
+		Popup.open("/portal/iv/survey/popup/vote?sSeq="+this.sSeq, 700, 700);
+	},
+}
+
+function callbackAfterVote() {
+	document.location.href = "/portal/iv/survey/list";
+}
 
 $(function(){
 	resizeView();
