[설문] 다국어 처리 외

--- a/src/main/resources/templates/portal/iv/survey/popup/vote.html
+++ b/src/main/resources/templates/portal/iv/survey/popup/vote.html
@@ -234,7 +234,7 @@ let Vote = {
 		    },
 		    error: function(jqXHR, textStatus, errorThrown)
 	    	{
-		    	alert('처리에 실패하였습니다');
+		    	alert('[[#{HQP_M_FAIL_SAVE}]]');
 		    	opener.callbackAfterVote();
 		    	window.close();
 	    	}
