--- a/src/main/resources/templates/portal/iv/survey/question/write.html
+++ b/src/main/resources/templates/portal/iv/survey/question/write.html
@@ -25,7 +25,7 @@
 		</tr>
 		<tr>
 			<th><span th:text="#{HQP_L_SURVEY_PERIOD}"></span></th>
-			<td>[[${survey?.validFrom}]] ~ [[${survey?.validTo}]]</td>
+			<td>[[${survey?.validFromYmdHHMI}]] ~ [[${survey?.validToYmdYmdHHMI}]]</td>
 		</tr>
 	</table>	
 	<br/><br/>
