[설문] 다국어및 쿼리 수정

--- a/src/main/resources/templates/portal/iv/survey/result/view.html
+++ b/src/main/resources/templates/portal/iv/survey/result/view.html
@@ -120,7 +120,7 @@
 								<table>
 									<tr>
 										<td>
-											<button class="small_button" th:onclick="goTextAnswers([[${voteItem.sSeq}]], [[${voteItem.sqSeq}]], [[${rowIndex.count}]]);">기타의견보기</button>
+											<button class="small_button" th:onclick="goTextAnswers([[${voteItem.sSeq}]], [[${voteItem.sqSeq}]], [[${rowIndex.count}]]);">[[#{HQP_B_VIEW_ANSWERS}]]</button>
 										</td>
 									</tr>
 								</table>
