--- a/src/main/resources/templates/portal/iv/survey/popup/vote.html
+++ b/src/main/resources/templates/portal/iv/survey/popup/vote.html
@@ -227,7 +227,7 @@ let Vote = {
 			},		
 		    success: function(response, textStatus, jqXHR)
 		    {
-		    	alert('성공적으로 처리되었습니다.');
+		    	alert('[[#{HQP_M_DONE_SUCCESSFULLY}]]');
 		    	opener.callbackAfterVote();
 		    	//opener.location.reload();
 		    	window.close();
