--- a/src/main/resources/templates/portal/iv/survey/question/write.html
+++ b/src/main/resources/templates/portal/iv/survey/question/write.html
@@ -135,7 +135,7 @@ function callbackSurveyQuestion(result) {
 	ProgressBar.hide();
 	
 	let sSeq = "[[${sqSeq}]]";
-	if (!JpUtilsString.isNotEmpty(sSeq) && confirm('계속 등록하시겠습니까?')) {
+	if (!JpUtilsString.isNotEmpty(sSeq) && confirm('[[#{HQP_M_KEEP_MAKING_QUESTIONS}]]')) {
 		window.location.reload();
 	} else {
 		window.close();
