--- a/src/main/resources/static/portal/css/layout/iv/hq/parts/basic.css
+++ b/src/main/resources/static/portal/css/layout/iv/hq/parts/basic.css
@@ -944,3 +944,21 @@ input.custom-ui[type="radio"]:checked + label:before {
 .bold {
 	font-weight: bold;
 }
+
+/* Go to top */
+a.gotop {
+	display: inline-block;
+}
+.bt-gotop {
+	position: fixed;
+	width: 100%;
+	min-width:1300px;
+	right: 55px;
+	bottom: 50px;
+	/*display: none;*/
+	text-align: right;
+}
+a.gotop img {
+	width:73px;
+	height:73px;
+}
