--- a/src/main/resources/templates/portal/iv/hq/parts/export/order/status/view.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/order/status/view.html
@@ -41,9 +41,9 @@
 
 <script>
 let $tableObj;
+let isDownloaded = false;
+
 $(function(){
-	let initCompleted = false;
-	
 	$tableObj = $("#TBL_grid").DataTable({
 		ordering: true,// 정렬 기능 켬
 		scrollY: 100,
@@ -95,17 +95,15 @@ $(function(){
 		},
 		initComplete:function(settings, json) 
 		{
-			initCompleted = true;
-			
 			ProgressBar.hide();
-		},
-		"drawCallback": function( settings ) {
-			if (initCompleted && "[[${fgDownload}]]" == "Y")
+			
+			if (!isDownloaded && "[[${fgDownload}]]" == "Y")
 			{
-				alert($("#orderNo").val());
 				$("#BTN_download").trigger("click");
 				parent.ProgressBar.hide();
-			};
+				
+				isDownloaded = true;
+			};	
 		}
 	});
 	
