--- a/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/bottom.html
+++ b/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/bottom.html
@@ -14,6 +14,7 @@
 	</div>
 </div>
 <!-- bottom.html end -->
+<div class="bt-gotop"><a href="#" class="gotop"><img th:src="@{/portal/img/iv/common/gotop.png}"></a></div>
 
 <!-- Logout -->
 <form id="FORM_logout" method="post" th:action="@{${T(org.jwebppy.portal.common.PortalConfigVo).FORM_LOGOUT_PROCESSING_URL}}"></form>
@@ -61,6 +62,22 @@ $(document).ready(function() {
 	    }	
 	});
 });
+
+$("body").scroll(function() {
+	if ($(this).scrollTop() > 200 )
+	{
+		$(".gotop").fadeIn();
+	}
+	else
+	{
+		$(".gotop").fadeOut();
+	};
+});
+
+$(".gotop").click(function() {
+	$("html, body").animate( { scrollTop : 0 }, 400);
+	return false;
+});	
 
 /*
  * Ajax global settings.
