--- a/src/main/resources/templates/portal/layout/iv/hq/parts/popup/fragments/bottom.html
+++ b/src/main/resources/templates/portal/layout/iv/hq/parts/popup/fragments/bottom.html
@@ -86,11 +86,11 @@ function _setPartAutocomplete(target)
 $("body").scroll(function() {
 	if ($(this).scrollTop() > 200 )
 	{
-		$("'.gotop").fadeIn();
+		$(".bt-gotop").fadeIn();
 	}
 	else
 	{
-		$(".gotop").fadeOut();
+		$(".bt-gotop").fadeOut();
 	};
 });
 
