scroll top 기능 수정

--- a/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/bottom.html
+++ b/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/bottom.html
@@ -179,6 +179,7 @@ function _setPartAutocomplete(target)
 	});
 };
 
+//자동 스크롤 탑
 $("body").scroll(function() {
 	if ($(this).scrollTop() > 200 )
 	{
