--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/accounts/ap/view.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/accounts/ap/view.html
@@ -111,8 +111,8 @@ $(function(){
 			{
 				p.pShipmentNo = $("#pShipmentNo").val();
 				p.pPartNo = $("#pPartNo").val();
-				p.pFromOnboardDate = $("#pFromInvoiceNo").val();
-				p.pToOnboardDate = $("#pToInvoiceNo").val();
+				p.pFromInvoiceNo = $("#pFromInvoiceNo").val();
+				p.pToInvoiceNo = $("#pToInvoiceNo").val();
 				p.pFromDate = $("#pFromDate").val();
 				p.pToDate = $("#pToDate").val();
 			},
